--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&display=swap"
+      rel="stylesheet"
+    />
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
